# necroid

./: .gitignore  CLAUDE.md  README.md  TODO.md  build.ps1  mod.ps1  pyproject.toml
.github/workflows/: release.yml
assets/: build-assets.sh
data/: TODO.md
lib/: mod-lib.ps1
mods/admin-xray/: mod.json
mods/admin-xray-41/: mod.json
mods/admin-xray-42/: mod.json
mods/auto-login-41/: README.md  mod.json
mods/ghost-zombie-fix-41/: README.md  mod.json
mods/gravymod-41/: mod.json
mods/gravymod-42/: mod.json
mods/lua-profiler/: mod.json
mods/lua-profiler-41/: mod.json
mods/lua-profiler-42/: mod.json
mods/more-zoom/: mod.json
mods/more-zoom-41/: mod.json
mods/more-zoom-42/: mod.json
mods/multi-login-41/: README.md  mod.json
mods/multi-login-42/: mod.json
mods/no-radio-fzzt-41/: README.md  mod.json
mods/no-radio-fzzt-42/: mod.json
necroid/: __init__.py  __main__.py  assets.py  cli.py  config.py  decompile.py  depgraph.py  errors.py  github.py  gui.py  install.py  mod.py  patching.py  paths.py  profile.py  pzversion.py  stackapply.py  state.py  steam_discovery.py  tools.py  updater.py
necroid/core/: mod.py  (+5 more)
packaging/: build_dist.py  release.py
pz-java-modder/: README.md  pyproject.toml
pz-java-modder/packaging/: build_dist.py
pz-java-modder/pz_java_modder/: __init__.py  buildjava.py  cli.py  config.py  decompile.py  errors.py  gui.py  install.py  logging_util.py  mod.py  profile.py
pz-java-modder/pz_java_modder/commands/: capture.py  diff.py  enter.py  init.py  install_cmd.py  list_cmd.py  reset.py  resync_pristine.py  status.py
(+165 files in other folders)
