[project]
name = "necroid"
version = "0.5.0"
description = "Necroid — Beyond Workshop. Diff-based Java mod manager for Project Zomboid (client and dedicated server)."
requires-python = ">=3.10"
authors = [{ name = "Kevin Gravier", email = "kevin@mrkmg.com" }]
license = { text = "Unlicense" }

[project.scripts]
necroid = "necroid.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["necroid*"]

